syntax = "proto3";

package user;
option go_package = ".;gen";

service UserService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc UploadAvatar(UploadAvatarRequest) returns (UploadAvatarResponse) {}
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse) {}
    rpc UpdatePassword(UpdatePasswordRequest) returns (EmptyResponse) {}
    rpc UpdateProfile(UpdateProfileRequest) returns (EmptyResponse) {}
    rpc GetAchievements(GetAchievementsRequest) returns (GetAchievementsResponse) {}
}


message SignUpRequest {
    string login = 1;
    string email = 2;
    string password = 3;
}

message SignUpResponse {
    uint32 id = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    uint32 id = 1;
    string login = 2;
    string email = 3;
    string avatar_path = 4;
}

message UploadAvatarRequest {
    uint32 id = 1;
    bytes avatar_data = 2;
    string avatar_file_name = 3;
}

message UploadAvatarResponse {
    string avatar_path = 2;
}

message GetProfileRequest {
    uint32 id = 1;
    uint32 requester_id = 2;
}

message GetProfileResponse {
    string login = 1;
    string email = 2;
    string avatar_path = 3;
}

message UpdatePasswordRequest {
    uint32 id = 1;
    string login = 2;
    string email = 3;
    string old_password = 4;
    string new_password = 5;
}

message UpdateProfileRequest {
  uint32 user_id = 1;
  string username = 2;
  string email = 3;
}

message GetAchievementsRequest {
    uint32 id = 1;
}

message Achievement {
    uint32 id = 1;
    string name = 2;
    string icon_path = 3;
}

message GetAchievementsResponse {
    repeated Achievement achievements = 1;
}
message EmptyResponse {}